--- a/style.css
+++ b/style.css
@@ -5,20 +5,42 @@ body {
 
 .header {
     display: flex;
-    background-color: #1f2937;
+    background-color: #1f2930;
     font-size: 24px;
     color: #f9faf8;
+    align-items: center;
+    padding: 8px;
 }
 
 .container1 {
     display: flex;
     background-color: #1f2937;
     color: #f9faf8;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-basis: 40%;
+    padding: 32px;
+}
+
+.about{
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
 }
 
 .container2 {
     display: flex;
     background-color: #eee;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .container3 {
@@ -28,4 +50,10 @@ body {
 
 .footer {
     display: flex;
+}
+
+img {
+    display: flex;
+    padding: 8px;
+    max-height: 256px;
 }
