--- a/style.css
+++ b/style.css
@@ -32,20 +32,35 @@ body {
     display: flex;
     background-color: #eee;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 32px;
+    font-size: 36px;
+    font-weight: bolder;
 }
 
 .info {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border: 4px;
+    border-color: #000;
 }
 
 .container3 {
     display: flex;
     background-color: #e5e7eb;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    display: flex;
+    max-width: 500px;
+    flex-basis: auto;
+    font-size: 36px;
+    font-style: italic;
 }
 
 .footer {
