--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body,
 .container3,
 .quote,
 .footer,
+.container4,
 .sign-up,
 img {
     display: flex;
@@ -83,7 +84,7 @@ img {
     font-style: italic;
 }
 
-.footer {
+.container4 {
     margin: 64px;
 }
 
@@ -107,6 +108,14 @@ img {
 
 .box-cont {
     font-size: 16px;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
 }
 
 .sign-up {
