--- a/style.css
+++ b/style.css
@@ -63,6 +63,14 @@ img {
     font-weight: bolder;
 }
 
+.painting {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    font-weight: 300;
+    align-items: center;
+}
+
 .info {
     align-items: center;
     justify-content: space-around;
@@ -75,6 +83,7 @@ img {
     background-color: #e5e7eb;
     justify-content: center;
     align-items: center;
+    padding: 32px;
 }
 
 .quote {
